[package]
name = "fsmbdd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdds = { path = "../bdds" }
ordered-float = "3.7.0"
sylvan = { path = "../sylvan-rs" }

[build-dependencies]
cmake = "0.1.50"