[package]
name = "ppsmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
smv = { path = "../smv-rs" }
logic-form = { path = "../logic-form" }
clap = { version = "4.3.0" , features = ["derive"] }
fsmbdd = { path = "../fsmbdd" }
sylvan = { path = "../sylvan-rs" }
arun = { path = "../arun" }
tokio = { version = "1.29.1", features = ["sync", "rt"] }
